Unescape when reading from nota

--- a/MultiLanguage/languages/RU/dictionaries/Dialogues.json
+++ b/MultiLanguage/languages/RU/dictionaries/Dialogues.json
@@ -306,7 +306,7 @@
     "There's a lot of interesting bugs and things out here. *chuckle*": "Тут много интересных жучков и других вещей. *хихиканье*",
     "I'm going in to town today, just so you know. I need to stretch these legs a bit.": "Я иду в город сегодня, чтобы ты знал. Мне нужно немного размять ноги.^Я иду в город сегодня, чтобы ты знала. Мне нужно немного размять ноги.",
     "Hey! Did you have a good day? Mine went well. It was refreshing to talk a walk.": "Привет! У тебя был хороший день? Мой прошел хорошо. Было приятно поболтать на прогулке.",
-    "I can't believe I'm a \\\"mom\\\"... life is weird.": "Я не могу поверить, что я \\\"мама\\\"... жизнь - странная штука.",
+    "I can't believe I'm a \"mom\"... life is weird.": "Я не могу поверить, что я \"мама\"... жизнь - странная штука.",
     "I already gave @key and @key their chocolate cereal. They were screaming!": "Я уже дала @key и @key их шоколадные хлопья. Они кричали!",
     "I had a dream that @key will grow up to be a famous monster hunter. I've already been thinking about a little armor set.": "Мне приснился сон, что @key вырастет знаменитым охотником на монстров. Я уже думала насчет небольшого набора брони.",
     "A cool old house, a couple kids, and an amazing farm. I never thought I'd come this far... but, hey! Our lives are just getting started.": "Клевый старый дом, пара детей, и удивительная ферма. Я никогда не думала, что дойду так далеко... но, эй! Наша жизнь только начинается.",
@@ -1029,7 +1029,7 @@
     "Little @key is going to have the perfect childhood here. There's so much to explore.": "У @key будет здесь чудесное детство! Тут так много мест, где можно погулять!",
     "Caring for babies isn't exactly my strong suit... but I'll do my best to be a good father.": "Забота о детях явно не мой главный талант... но я делаю всё что могу, чтобы быть хорошим отцом.",
     "I already gave @key and @key their food. They eat a lot for such small creatures!": "Я уже покормил @key и @key. Они весьма прожорливы для своего возраста!",
-    "I was carrying @key earlier, and I could've sworn I heard a \\\"Da...da\\\".": "Когда я нянчил @key, то могу поклясться, что явно слышал \\\"па...па\\\" от крохи.",
+    "I was carrying @key earlier, and I could've sworn I heard a \"Da...da\".": "Когда я нянчил @key, то могу поклясться, что явно слышал \"па...па\" от крохи.",
     "I'm going to teach @key to read as soon as possible! That's a great way for children to learn about the world.": "Я собираюсь обучить @key читать как можно раньше. Ведь книги - это лучший способ познать мир!",
     "We've done well, @player. The farm is doing excellent and our healthy children are a great joy. I couldn't be happier.": "Мы не плохо справляемся, @player. Наша ферма процветает, дети здоровы и счастливы. Как счастлив и Я.",
     "@player... I'm so proud of all your hard work. I'm very lucky to have you.": "@player... Я так горжусь тем, что ты делаешь. Как же мне всё таки повезло встретить тебя!",
@@ -1444,7 +1444,7 @@
     "Do you think you'll ever have a pony on your farm?": "Как ты думаешь, ты когда-нибудь будешь выращивать пони на своей ферме?",
     "I'm glad you have less work to do in the winter.": "Я рада, что у тебя меньше работы зимой.",
     "It must be nice to have a break, huh?": "Это должно быть приятно иметь перерыв, да?",
-    "@player, you look rugged today. I like it.": "@player, ты какой-то бурный сегодня. Мне нравится.",
+    "@player, you look rugged today. I like it.": "@player, ты какой-то суровый сегодня. Мне нравится.",
     "@player, you look pretty today.": "@player, ты хорошо выглядишь сегодня.",
     "...": "...",
     "Hmmmmm...": "Хмммм...",
@@ -1530,7 +1530,7 @@
     "I don't mind the rain. Sure, I can't watch the planes go by, but I can still listen to the radio chatter.": "Я не против дождя. Конечно, в такую погоду я не могу наблюдать за самолётами, но никто не может мне запретить прослушивать радио переговоры.",
     "It makes the whole thing a little more mysterious.": "Это придаёт моему хобби толику загадочности.",
     "I have a backlog of house chores I want to complete today. I've got plenty to keep me busy!": "У меня целый список домашних дел на сегодня. И он достаточно обширен, что бы не дать мне присесть весь день!",
-    "How was your day, honey? I was going to do the dishes but I got absorbed in the latest issue of \\\"Knee Surgery Enthusiast\\\".": "Как прошёл твой день, любимый? Я собирался помыть посуду, но так увлёкся \\\"Любительской коленной хирургией\\\", что совсем забыл об этом.^Как прошёл твой день, любимая? Я собирался помыть посуду, но так увлёкся \\\"Любительской коленной хирургией\\\", что совсем забыл об этом.",
+    "How was your day, honey? I was going to do the dishes but I got absorbed in the latest issue of \"Knee Surgery Enthusiast\".": "Как прошёл твой день, любимый? Я собирался помыть посуду, но так увлёкся \"Любительской коленной хирургией\", что совсем забыл об этом.^Как прошёл твой день, любимая? Я собирался помыть посуду, но так увлёкся \"Любительской коленной хирургией\", что совсем забыл об этом.",
     "If you're enjoying life, who cares if it's a little repetitive? That's what I say.": "Если тебе нравится твоя жизнь, то какое кому дело, что она монотонная? По крайней мере я так думаю.",
     "You look a little soggy, hun. Why don't you warm yourself by the fire?": "Ты выглядишь продрогшим, милый. Почему бы тебе не сесть поближе к камину?",
     "You look a little soggy, dear. Why don't you warm yourself by the fire?": "Ты выглядишь продрогшей, сладкая. Почему бы тебе не сесть поближе к камину?",
@@ -4049,7 +4049,7 @@
     "See? @player agrees with me.": "Видите? @player со мной согласен.",
     "Well, we'd better titrate this solution before it crystallizes on us.": "Ну, нам лучше титровать данный раствор, прежде чем он кристаллизуется.",
     "*sigh*...": "*вздох*...",
-    "Demetriums is deep in thought.": "\"Деметрий сильно задумался.\"",
+    "Demetriums is deep in thought.": "Деметрий сильно задумался.",
     "Sorry, I'm really busy.": "К сожалению, я очень занят.",
     "There's so many plants to study right now.": "Слишком много растений для исследований.",
     "Make sure to water your plants every day.": "Не забывай ежедневно поливать свои растения.",
@@ -4085,7 +4085,7 @@
     "Cooking is kind of like doing lab work.": "Кулинария - это почти, как выполнение лабораторной работы.",
     "Do you have any animals on your farm?": "У тебя есть животные на ферме?",
     "Hello.": "Здравствуй.",
-    "Demetrius seems lost in thought.": "\\\"Деметрий кажется потерянным в мыслях.\\",
+    "Demetrius seems lost in thought.": "Деметрий кажется потерянным в мыслях.",
     "Let's see... if seasonal nitrogen levels could be modeled by a piecewise function...": "Давайте посмотрим ... если сезонные уровни азота могут быть смоделированы с помощью частичной-функции...",
     "Oh! Sorry. I was analyzing data and I didn't notice you there.": "Тебе что-нибудь нужно?",
     "Feel free to harvest as much lumber and stone from this area as you please.": "Не стесняйся, можешь собирать древесину и камень в этой местности, сколько угодно.",
@@ -4226,18 +4226,18 @@
     "It's a little lonely out here on the beach... so I apologize if I was ever a little too forward with you when we first met. I was just eager to have a friend.": "На этом пляже немного одиноко... поэтому я прошу прощения, если я был слишком дерзок с вами, когда мы впервые встретились. Я бы просто хотел иметь друга.",
     "Itfeels good to have a close friend like you.": "чувствует себя хорошо, имея такого близкого друга как ты.",
     "Hello, @player.": "Привет, @player.",
-    "Are you well?": "Все хорошо?",
-    "The fresh air of this valley is good for body and mind.": "Свежий воздух этой долины хорошо действует на тело и разум.",
-    "A quick stroll outdoors always invigorates me.": "Прогулка быстрым шагом на свежем воздухе всегда меня бодрит.",
-    "I'll admit... it takes me several hours each morning to make my hair look this good.": "Я признаю... каждое утро у меня уходит несколько часов на то, чтобы мои волосы отлично выглядели.",
-    "You probably wouldn't like it inside my cabin. It's dark and full of spiders.": "Тебе, наверное, не понравится моя кабинка. Внутри как ночь темно и пауков полно.",
+    "Are you well?": "Как ты?",
+    "The fresh air of this valley is good for body and mind.": "Свежий воздух долины хорошо влияет на тело и разум.",
+    "A quick stroll outdoors always invigorates me.": "Быстрая прогулка на свежем воздухе всегда бодрит меня.",
+    "I'll admit... it takes me several hours each morning to make my hair look this good.": "Я признаю... у меня уходит несколько часов каждое утро, чтобы сделать мои волосы такими красивыми.",
+    "You probably wouldn't like it inside my cabin. It's dark and full of spiders.": "Тебе наверное не понравится в моей комнате. Там темно и она полна пауков.",
     "Please excuse the sorry state of my cabin.": "Прошу прощения за плачевное состояние моей комнаты.",
     "Some people are shy. Keep showing interest in them and they'll get comfortable around you.": "Некоторые люди застенчивы. Продолжай проявлять интерес к ним, и им станет комфортно с тобой.",
     "Everyone likes to have friends, even that grumpy blacksmith.": "Каждый хочет иметь друзей, даже сварливый кузнец.",
     "Hello. I hope your new farming life is panning out as you'd hoped?": "Здравствуй. Надеюсь, твоя новая фермерская жизнь идёт именно так, как ты рассчитывал?",
-    "Oh, @player! I was hoping you'd show up.": "Ой, @player! Я надеялся что ты объявишься.",
-    "It's always a pleasure to see you.": "Видеть тебя - всегда удовольствие.",
-    "Mystery, huh? It's definitely an exciting genre. I'll remember that.": "Тайна, да? Это определенно захватывающий жанр. Я запомню это.",
+    "Oh, @player! I was hoping you'd show up.": "Ох, @player! Я надеялся что ты появишься.",
+    "It's always a pleasure to see you.": "Всегда рад видеть тебя.",
+    "Mystery, huh? It's definitely an exciting genre. I'll remember that.": "Мистика, да? Это определенно захватывающий жанр. Я запомню это.",
     "Ah, one of the classic genres. I'll remember that.": "Ах, один из классических жанров. Я запомню это.",
     "I would've never guessed! I suppose even those of the 'earthiest' profession sometimes have their heads in the stars.": "Я бы никогда не догадался! Я полагаю, даже у людей 'земляных' профессий иногда случается звёздная болезнь.",
     "I'll remember that.": "Я запомню это.",
@@ -4278,7 +4278,7 @@
     "Maybe you sensed it.": "Возможно, ты это почувствовал.^Возможно, ты это почувствовала.",
     "So! Tell me about your day.": "Так! Расскажи мне про свой день.",
     "I wouldn't mind trying my hand at farming.": "Я бы не прочь попробовать свои силы в фермерстве.",
-    "The quiet atmosphere of a farm might be a good source of literary inspiration, don't you think?": "Тихая атмосфере фермы может быть хорошим источником литературного вдохновения, тебе не кажется.",
+    "The quiet atmosphere of a farm might be a good source of literary inspiration, don't you think?": "Тихая атмосфера фермы может быть хорошим источником литературного вдохновения, тебе не кажется?",
     "Oh dear! A tiny crab appears to have made his home in my shirt pocket.": "Ах, Боже мой! Крошечный краб, кажется, сделал дом в кармане моей рубашки.",
     "That's the trouble with living on the beach.": "Это беда живущих на пляже.",
     "My legs are stiff from sitting at my writing desk all night.": "Мои ноги затекли от сидения за письменным столом всю ночь.",
@@ -4288,7 +4288,7 @@
     "I know... strange, but it's true.": "знаю... странно, но это правда.",
     "It gets windy this time of year. Marvelous!": "Становится ветрено в это время года. Изумительно!",
     "I have to remember to water my plants today. And not with sea water this time!": "Я должен не забыть полить свои растения сегодня. И не с морской водой на этот раз!",
-    "You've come to visit me in the cold?": "Ты шел по этому холоду, чтобы навестить меня?^Ты шла по этому холоду, чтобы навестить меня?Ты шел по этому холоду, чтобы навестить меня?",
+    "You've come to visit me in the cold?": "Ты шел по этому холоду, чтобы навестить меня?^Ты шла по этому холоду, чтобы навестить меня?",
     "I could do with a respite from my lonely labors.": "Я могу взять передышку от моей одинокой работы.",
     "@player, you've trudged through the snow to visit me?": "@player, ты поплелся через весь этот снег, чтобы навестить меня?^@player, ты поплелась через весь этот снег, чтобы навестить меня?",
     "I'm honored!": "Я польщен!",
@@ -4799,7 +4799,7 @@
     "Hmmph... Looks like another gloomy day.": "Хм... Похоже, это еще один мрачный день.",
     "Alex is my grandson. Have I told you that already?": "Алекс - мой внук. Я уже это тебе говорил?",
     "Huh? Speak up.": "А? Говори.",
-    "How can two men get married? It's unnatural... Hmmph. I guess I'm just \\\"old fashioned\\\"...": "Как два мужчины могут вдруг поженится? Это же неестественно... хмфр. Наверное я просто слишком \\\"старомоден\\\"...",
+    "How can two men get married? It's unnatural... Hmmph. I guess I'm just \"old fashioned\"...": "Как два мужчины могут вдруг поженится? Это же неестественно... хмфр. Наверное я просто слишком \"старомоден\"...",
     "You're part of the family, now. I'm glad that my grandson found such a nice wife.": "Теперь ты часть семьи. Я рад, что мой внук смог найти такую хорошую жену.",
     "I'll admit, I thought it was... strange... for two men to be together. But you're such a nice young man, and I know you two are in love... I've changed my mind.": "Должен признать, поначалу я думал, что это... странно...что двое мужчин живут вместе. Но ты действительно не плохой человек и вы похоже и вправду любите друг друга... Я изменил своё мнение о вас.",
     "You're part of the family, now... and I couldn't be more proud.": "Теперь ты часть семьи... и я не могу не гордиться этим.",
@@ -6004,7 +6004,7 @@
     "Keep it up, kid. I think you're gonna be a star.": "Так держать, малыш. Я думаю, ты хочешь стать звездой.",
     "Just ask me if you need anything.": "Просто спроси меня, если тебе что-нибудь понадобится.",
     "I knew you'd get a club card someday. Of course, I had to make it a little difficult so you'd have an incentive to do well.": "Я знал, что когда-нибудь ты получишь клубную карту. Конечно, мне пришлось все немного усложнить, чтобы у тебя был стимул чтобы сделать все хорошо.",
-    "If you run out of club coins you can buy a 10-pack at the machine outside my door. Good luck.": "Если у вас кончились клубные монеты, вы можете купить 10-штук в автомате за моей дверью. Удачи.",
+    "If you run out of club coins you can buy a 10-pack at the machine outside my door. Good luck.": "Если у тебя кончились клубные монеты, ты можешь купить 10-штук в автомате за моей дверью. Удачи.",
     "Hey. Don't tell anyone about this place, okay? I want to keep it... exclusive.": "Привет. Никому не говори об этом месте, ладно? Я хочу, чтобы оно было... эксклюзивным.",
     "You'd keep a secret for your old pal Mr. Qwee, wouldn't you?": "Ты же сохранишь секрет твоего старого приятеля, Мистера Кви, не так ли?",
     "Kid, there's more to me than meets the eye. Remember that.": "Парень, я вижу больше чем все. Запомни это.^Деточка, я вижу больше чем все. Запомни это.",
