--- a/MultiLanguage/languages/RU/dictionaries/Festivals.json
+++ b/MultiLanguage/languages/RU/dictionaries/Festivals.json
@@ -123,17 +123,17 @@
   "Don't get too close to the cage.": "Держись в шаге от клетки.",
   "__comment": "spring13",
   "Egg Festival": "Яичный Фестиваль",
-  "\\\"Wow, look at all these eggs!": "\\\"Вы только посмотрите сколько яиц!",
-  "Now if only I could get you kids to pick up litter this efficiently, we'd have the cleanest town this side of the Gem Sea! *chuckle*\\": "Эх, детвора... ваш запал, да на уборку мусора - мы бы жили в самом чистом городе по эту сторону Жемчужного моря! *смеётся*\\",
-  "\\\"And now, the winner of this year's egg hunt...\\": "\\\"А победителем яичной охоты в этом году становится...\\",
-  "\\\"Here's your prize! Enjoy.\\": "\\\"Поздравляю! Держи свой приз!\\",
-  "\\\"Well, that's it for this year's Egg Festival. Thanks for coming, everyone!\\": "\\\"Ну что, друзья, Яичный фестиваль окончен. Спасибо всем, кто пришёл!\\",
-  "\\\"Here's your prize, Abigail. Enjoy!\\": "\\\"Поздравляю Эбигейл! Вот твой приз!\\",
-  "\\\"Well, that's it for this year's Egg Festival. Thanks for coming, everyone!\\": "\\\"Ну вот, Яичный фестиваль окончен. Спасибо, что пришли!\\",
-  "\\\"It's time for the highlight of today's festivities... The Annual Spring Egg Hunt!\\": "\\\"Пришло время главного события нашего праздника... Ежегодной весенней яичной охоты!\\",
-  "\\\"Calm down now, kiddos. You're going to need all your energy if you hope to find the most eggs and take home the exclusive prize.\\": "\\\"Тише, детвора. Эта энергия вам ещё очень понадобится, если хотите найти много яиц и получить особый приз.\\",
-  "\\\"Now... Is everyone ready?\\": "\\\"Итак... Все готовы?\\",
-  "\\\"Let the egg hunt begin!\\": "\\\"Объявляю яичную охоту... ОТКРЫТОЙ!\\",
+  "Wow, look at all these eggs!": "Вы только посмотрите сколько яиц!",
+  "Now if only I could get you kids to pick up litter this efficiently, we'd have the cleanest town this side of the Gem Sea! *chuckle*": "Эх, детвора... ваш запал, да на уборку мусора - мы бы жили в самом чистом городе по эту сторону Жемчужного моря! *смеётся*",
+  "And now, the winner of this year's egg hunt...": "А победителем яичной охоты в этом году становится...",
+  "Here's your prize! Enjoy.": "Поздравляю! Держи свой приз!",
+  "Well, that's it for this year's Egg Festival. Thanks for coming, everyone!": "Ну что, друзья, Яичный фестиваль окончен. Спасибо всем, кто пришёл!",
+  "Here's your prize, Abigail. Enjoy!": "Поздравляю Эбигейл! Вот твой приз!",
+  "Well, that's it for this year's Egg Festival. Thanks for coming, everyone!": "Ну вот, Яичный фестиваль окончен. Спасибо, что пришли!",
+  "It's time for the highlight of today's festivities... The Annual Spring Egg Hunt!": "Пришло время главного события нашего праздника... Ежегодной весенней яичной охоты!",
+  "Calm down now, kiddos. You're going to need all your energy if you hope to find the most eggs and take home the exclusive prize.": "Тише, детвора. Эта энергия вам ещё очень понадобится, если хотите найти много яиц и получить особый приз.",
+  "Now... Is everyone ready?": "Итак... Все готовы?",
+  "Let the egg hunt begin!": "Объявляю яичную охоту... ОТКРЫТОЙ!",
   "Go away, we're adversaries until the egg hunt is over!": "Иди, пока длиться игра мы противники!",
   "I never had many friends in town, so these events are always kind of boring for me. I enjoy the buffet, though.": "У меня не когда не было много друзей, поэтому такие игры для меня были скучными.Хотя бы есть шведский стол.",
   "I'm just catching up with Penny. Have you had your fill of eggs?": "Я просто общаюсь с Пенни. У тебя хватило яиц?\n",
@@ -192,7 +192,7 @@
   "Ah, the sewers are flowing quickly today. It'll get nice and humid in here... just how I like it.": "О, сегодня в канализации бурные потоки. Воздух стал влажный и тяжёлый... прямо как я люблю.",
   "__comment": "spring24",
   "Flower Dance": "Танец цветов",
-  "\\\"That was fun! Time to go home...\\": "\\\"Было весело! Теперь пора домой...\\",
+  "That was fun! Time to go home...": "Было весело! Теперь пора домой...",
   "I really hate dancing in front of everyone... It's so embarrassing.": "Ненавижу танцевать, когда на меня все смотрят... Мне неловко.",
   "Mom makes me do it.": "А мама меня заставляет.",
   "Ahh... The air smells so sweet with all these flowers.": "Ах... От всех этих цветов так сладко пахнет воздух.",
