--- a/MultiLanguage/languages/RU/dictionaries/Items.json
+++ b/MultiLanguage/languages/RU/dictionaries/Items.json
@@ -1360,24 +1360,24 @@
     "Adds some character to your home or farm.": "Украшает ваш дом или участок.",
     "Scarecrow": "Пугало",
     "Prevents crows from attacking your crops. Has a limited radius (about 8 \"tiles\").": "Отпугивает ворон от грядок. Имеет ограниченный радиус (около 8 \"клеток\").",
-    "Lightning Rod": "Грозоотвод",
-    "Collects energy from lightning storms and turns it into battery packs.": "Накапливает энергию грозы и превращает её в батарейки.",
+    "Lightning Rod": "Молниеотвод",
+    "Collects energy from lightning storms and turns it into battery packs.": "Собирает полученную энергию от молнии и перенаправляет ее в батарейки.",
     "Bee House": "Пчелиный домик",
     "Place outside and wait for delicious honey! (Except in Winter).": "Поместите на своем участке и ждите мёда! (Исключая зиму).",
-    "Keg": "Кег",
-    "Place a fruit or vegetable in here. Eventually it will turn into a beverage.": "Положите в него фрукт или овощ, подождите несколько дней и получите напиток.",
+    "Keg": "Бочонок",
+    "Place a fruit or vegetable in here. Eventually it will turn into a beverage.": "Положите в него фрукт или овощ, а в конце из этого получится напиток.",
     "Furnace": "Плавильня",
     "Turns ore and coal into metal bars.": "Превращает руду и уголь в слитки металла.",
     "Preserves Jar": "Бочка для консервации",
     "Turns vegetables into pickles and fruit into jam.": "Делает из овощей соленья, а из фруктов варенье.",
-    "Cheese Press": "Пресс для сыра",
-    "Turns milk into cheese.": "Превращает молоко в сыр.",
+    "Cheese Press": "Сыродельная машина",
+    "Turns milk into cheese.": "Перерабатывает молоко в сыр.",
     "Loom": "Прялка",
     "Turns raw wool into fine cloth.": "Из шерсти делает тонкие нитки.",
     "Oil Maker": "Масломашина",
     "Makes gourmet truffle oil.": "Делает изысканное трюфельное масло.",
     "Recycling Machine": "Утилизатор",
-    "Turns fishing trash into resources.": "Превращает мусор из водоёмов в полезные ресурсы.",
+    "Turns fishing trash into resources.": "Превращает рыболовный мусор в ресурсы.",
     "Crystalarium": "Кристалларий",
     "Insert a gem of your choice and it will grow copies.": "Выращивает копии драгоценных камней.",
     "Table Piece L": "Левый Кусок Таблицы",
@@ -1385,7 +1385,7 @@
     "Table Piece R": "Правый Кусок Таблички",
     "The right side of a big table": "Правая сторона большой таблички",
     "Mayonnaise Machine": "Майонезная машина",
-    "Turns eggs into mayonnaise.": "Превращает яйца в майонез.",
+    "Turns eggs into mayonnaise.": "Делает из яиц майонез.",
     "Seed Maker": "Извлекатель семян",
     "Place crops inside to produce a varying amount of seeds. Doesn't work with fruit tree crops.": "Поместите урожай в эту машину, чтобы получить семена. Неработает с плодами фруктовых деревьев.",
     "Wood Chair": "Деревянный стул50",
