--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -10,7 +10,7 @@
   "Place 10 beets inside Mayor Lewis' fridge.": "Положи 10 свёкол в холодильник Мэра Льюиса.",
   "The Mysterious Qi": "Таинственное Ци",
   "You've found yet another strange note within the Mayor's fridge. This time, the instructions are more cryptic.": "Вы нашли очередную странную записку в холодильнике мэра. На этот раз, инструкции более загадочные.",
-  "\"Give the sand dragon his final meal.\"": "\\\"Подай песчаному дракону его последнее блюдо.\\\"",
+  "\"Give the sand dragon his final meal.\"": "\"Подай песчаному дракону его последнее блюдо.\"",
   "The Mysterious Qi": "Таинственное Ци",
   "You found another note in the sand dragon's eye. It seems Mr. Qi's strange scavenger hunt has come to an end.": "Вы нашли следующую записку в глазу песчаного дракона. Кажется странная охота за мусором Мр.Ци подошла к концу.",
   "Inspect the lumber pile beside your house.": "Осмотри кучу пиломатериала рядом со своим домом.",
@@ -83,8 +83,8 @@
   "Jodi's Request": "Просьба Джоди",
   "Jodi needs a fresh cauliflower for a recipe she's making. She's asking you to bring her one.": "Джоди нужна свежая цветная капуста для рецепта который она делает. Она просит вас принести ей одну.",
   "Bring Jodi a cauliflower.": "Принести Джоди цветную капусту.",
-  "Mayor's \"Shorts\"": "Mayor's \\\"Штаны\\\"",
-  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые штаны \\\"shorts\\\". Он просит Вас найти и вернуть их... Незаметно.",
+  "Mayor's \"Shorts\"": "Mayor's \"Штаны\"",
+  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые штаны \"shorts\". Он просит Вас найти и вернуть их... Незаметно.",
   "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые штаны Мэра Льюиса.",
   "Pam Is Thirsty": "Жаждущая Пэм",
   "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет бледный эль. Регулярное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
@@ -129,7 +129,7 @@
   "Evelyn wants to surprise her husband with a gift.": "Эвелин хочет удивить своего мужа подарком.",
   "Bring Evelyn a Leek.": "Принести Эвелин лук-порей.",
   "Pierre's Notice": "Объявление Пьера",
-  "Pierre will pay \"top coin\" to whoever brings him a plate of sashimi. Apparently he's really craving the stuff.": "Пьер заплатит \\\"дорогими монетами\\\" тому кто принесет ему тарелку сашими. По-видимому он действительно его жаждет.",
+  "Pierre will pay \"top coin\" to whoever brings him a plate of sashimi. Apparently he's really craving the stuff.": "Пьер заплатит \"дорогими монетами\" тому кто принесет ему тарелку сашими. По-видимому он действительно его жаждет.",
   "Bring Pierre some Sashimi.": "Принести Пьеру Сашими.",
   "Aquatic Research": "Водные исследования",
   "Demetrius is studying the toxin levels of the local pufferfish. He'd like you to bring him one.": "Деметрий изучает уровень токсина местной рыбы Фугу. Он хотел бы, чтобы Вы принесли ему одну.",
