--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -3,7 +3,7 @@
   "@key x @number": "@key x @number",
   "__comment on money made screen after day end, eg:Stone x2": "__comment on money made screen after day end, eg:Stone x2",
   "@key x@number": "@key x@number",
-  "__comment Achievements, like Gofer\\r\\n\\r\\nDescription": "__comment Achievements, like Gofer\\r\\n\\r\\nDescription",
+  "__comment Achievements, like Gofer\r\n\r\nDescription": "__comment Achievements, like Gofer\r\n\r\nDescription",
   "@key@newline@newline@key": "@key@newline@newline@key",
   "__comment Collections page (fishing, shipped, etc. item hover description)": "__comment Collections page (fishing, shipped, etc. item hover description)",
   "@key@newline@newline@key@newline@newline@key": "@key@newline@newline@key@newline@newline@key",
@@ -382,7 +382,7 @@
   "The Queen Of Sauce (Re-run)": "Королева Приправ (Повтор)",
   "(Leave)": "(Выключить)",
   "Select channel:": "Выбрать канал:",
-  "Welcome to \\\"Livin' Off The Land\\\". We're back again with another tip for y'all. Now listen up:": "Добро пожаловать на программу \\\"Фермерская жизнь\\\". Мы вернулись снова с новым советом для вас. А теперь, послушайте его:",
+  "Welcome to \"Livin' Off The Land\". We're back again with another tip for y'all. Now listen up:": "Добро пожаловать на программу \"Фермерская жизнь\". Мы вернулись снова с новым советом для вас. А теперь, послушайте его:",
   "Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева приправ! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
   "Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... Долины Стардью? Милости просим!",
   "Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... Долины Стардью? Милости просим!",
