--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -250,7 +250,7 @@
   "It's set to the news station.": "Настроен на канал новостей.",
   "Guitar picks and skateboard wheels.": "Медиаторы и колёса от скейта.",
   "There's a bunch of extra strong hair gel in here.": "Куча баночек с экстра-сильным гелем.",
-  "Hey, don't look in there!": "Эй, не лазь там!",
+  "Hey, don't look in there!": "Эй, не лазь туда!",
   "Looks like Sam cleans his trash bin regularly.": "Похоже, Сэм регулярно выносит мусор.",
   "There's a bunch of skateboarding magazines.": "Стопка журналов по скейтбордингу.",
   "'UFO Mysteries'": "\"Тайны НЛО\"",
