--- a/MultiLanguage/languages/RU/dictionaries/schedules.json
+++ b/MultiLanguage/languages/RU/dictionaries/schedules.json
@@ -35,7 +35,7 @@
   "My back has been hurting, doctor... you know, with all the hunching over to write my novel.": "Доктор, я чувствую боль в спине...Знаете, когда пишешь сгорбившись свой роман, редко вспоминаешь об осанке.",
   "__comment": "Emily",
   "Most of us visit the doctor for a yearly check-up.": "Большинство из нас посещают врача на ежегодном обследовании.",
-  "Doctor, I'd like to go with the 'natural remedy' if possible.": "Доктор, если возможно, я бы хотела обойтись \\\"народной медициной\\\".",
+  "Doctor, I'd like to go with the 'natural remedy' if possible.": "Доктор, если возможно, я бы хотела обойтись \"народной медициной\".",
   "What a lovely loom. I'm in heaven right now.": "Какая чудесная комната. Я как будто в раю.",
   "__comment": "Evelyn",
   "When you get to be my age you have to see the doctor more often.": "Когда ты доживешь до моего возраста, тебе придется обращаться к врачу чаще.",
